Aplicação de CSS
Primeiras aplicações de CSS com cores, grids, boxes e fontes

--- a/p-links/files/images.html
+++ b/p-links/files/images.html
@@ -5,21 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagens</title>
+
+    <link rel="stylesheet" href="../styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
 </head>
 <body>
     
-    <ul>
-        <li><a href="../index.html">Início</a></li>
-        <li><a href="files/images.html">Imagens</a></li>
-        <li><a href="../contact.html">Contato</a></li>
-    </ul>
+    <aside>
+        <ul>
+            <li><a href="../index.html">Início</a></li>
+            <li><a href="files/images.html">Imagens</a></li>
+            <li><a href="../contact.html">Contato</a></li>
+        </ul>
+    </aside>
 
-    <h1>Imagens</h1>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi iusto, saepe provident nobis dolore est ad praesentium iure ratione sapiente veniam consectetur in officiis, necessitatibus eaque molestiae qui ducimus beatae?</p>
+    <header>
+        <h1 id="titulo">Imagens</h1>
+    </header>    
 
-    <p><img src="dancing.png" alt="Dancing" width="400px" height="300px"></p>
-    <p><img src="reading.png" alt="Reading" width="400px" height="300px"></p>
+    <main>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi iusto, saepe provident nobis dolore est ad praesentium iure ratione sapiente veniam consectetur in officiis, necessitatibus eaque molestiae qui ducimus beatae?</p>
 
+        <p><img src="dancing.png" alt="Dancing" width="400px" height="300px"></p>
+        <p><img src="reading.png" alt="Reading" width="400px" height="300px"></p>
+    </main>    
+
+    <footer></footer>
 </body>
 </html>
