--- a/p-links/contact.html
+++ b/p-links/contact.html
@@ -5,30 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+
+    <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
 </head>
 <body>
     
-    <ul>
-        <li><a href="./index.html">Início</a></li>
-        <li><a href="files/images.html">Imagens</a></li>
-        <li><a href="./contact.html">Contato</a></li>
-    </ul>
+    <aside>
+        <ul>
+            <li><a href="./index.html">Início</a></li>
+            <li><a href="files/images.html">Imagens</a></li>
+            <li><a href="./contact.html">Contato</a></li>
+        </ul>
+    </aside>
 
-    <h1>Contato</h1>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aspernatur sequi facilis? Dignissimos culpa hic fugiat, tempora iure maxime commodi minus debitis facere tempore, incidunt eius sunt necessitatibus eum vel?</p>
-
-    <h2>Fale comigo</h2>
-    <address>
-        <p>Marcos Vieira
+    <header>
+        <h1 id="titulo">Contato</h1>
+    </header>
+    
+    <main>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aspernatur sequi facilis? Dignissimos culpa hic fugiat, tempora iure maxime commodi minus debitis facere tempore, incidunt eius sunt necessitatibus eum vel?</p>
         <br>
-        <strong>Novo Jardim, TO</strong>
+        <h2>Fale comigo</h2>
         <br>
-        <a href="mailto:marcosnd.31@gmail.com">marcosnd.31@gmail.com</a>
-        <br>
-        <a href="tel:+5589994020340">+55 (89) 99402-0340</a>
-        </p>
-    </address>
+        <address>
+            <p>Marcos Vieira
+            <br>
+            <strong>Novo Jardim, TO</strong>
+            <br>
+            <a href="mailto:marcosnd.31@gmail.com">marcosnd.31@gmail.com</a>
+            <br>
+            <a href="tel:+5589994020340">+55 (89) 99402-0340</a>
+            </p>
+        </address>
+    </main>
 
+    <footer></footer>
 </body>
 </html>
