--- a/p-links/files/images.html
+++ b/p-links/files/images.html
@@ -14,7 +14,7 @@
     <aside>
         <ul>
             <li><a href="../index.html">Início</a></li>
-            <li><a href="files/images.html">Imagens</a></li>
+            <li><a href="images.html">Imagens</a></li>
             <li><a href="../contact.html">Contato</a></li>
         </ul>
     </aside>
